<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.cytosm</groupId>
	<artifactId>parent</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

  <name>Cytosm</name>
  <description>Cytosm Graph Tools</description>

	<distributionManagement>
		<repository>
			<id>deffun-releases</id>
			<url>https://repo.deffun.io/releases</url>
		</repository>
        <snapshotRepository>
            <id>deffun-snapshots</id>
            <url>https://repo.deffun.io/releases</url>
        </snapshotRepository>
	</distributionManagement>

	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>James Brook</name>
			<email>jmbrook@gmail.com</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>MarcoLotz</id>
			<name>Marco Aurelio B. F. Gomes Lotz</name>
			<email>contact@marcolotz.com</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>suksant</id>
			<name>Suksant Sae Lor</name>
			<email>suksant@gmail.com</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>alzindiq</id>
			<name>Luis Miguel Vaquero Gonzalez</name>
			<email>alzindiq@gmail.com</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>Nemikolh</id>
			<name>Joan Varvenne</name>
			<email>joan.varvenne@gmail.com</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>????</id>
			<name>Alhamza Alnaimi</name>
			<email>????</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>????</id>
			<name>Benjamin Alexander Steer</name>
			<email>????</email>
			<timezone>0</timezone>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<modules>
		<module>common</module>
		<module>cypher2sql</module>
		<module>pathfinder</module>
	</modules>
	<dependencies>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>apache-log4j-extras</artifactId>
			<version>1.2.17</version>
		</dependency>

		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-core-asl</artifactId>
			<version>1.9.13</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<systemPropertyVariables>
						<log4j.configuration>file:${project.parent.basedir}/config/my-log4j-test.properties</log4j.configuration>
					</systemPropertyVariables>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>2.17</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.2.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
